Fix dropdown position on IE

--- a/sass/azendoo/components/_dropdowns.sass
+++ b/sass/azendoo/components/_dropdowns.sass
@@ -233,7 +233,7 @@
 
     &.right,
     &.left
-      position: initial
+      position: static
       > .arrow
         top: 100%
         left: 50%
@@ -253,7 +253,7 @@
   padding: 0
   border: none
   box-shadow: none
-  position: initial
+  position: static
   float: none
 
 // Dropdown menu icons
